--- a/技术总结.md
+++ b/技术总结.md
@@ -27,3 +27,32 @@ private:
   MutexLock& mutex_;
 };
 ```
+### 条件变量
+1. Blockingqueue
+关于封装条件变量的一般使用，假设我们要实现简单的容量无限的BlockingQueue，可以这样写：
+```
+MutexLock mutex;
+Condition cond(mutex);
+std::deque<int> queue;
+
+int dequeue()
+{
+    MutexLockGurad lock(mutex);
+    while(queue.empty())
+    {
+        cond.wait();//这一步会释放mutex并进入等待，这两个操作是原子的
+        //wait()返回后，会自动重新加锁
+    }
+    assert(!queue.empty());
+    int top = queue.front();
+    queue.pop_front();
+    return top;
+}
+
+void enqueue(int x )
+{
+    MutexLockGurad(mutex);
+    queue.push_back(x);
+    cond.notify();
+}
+```
