--- a/技术总结.md
+++ b/技术总结.md
@@ -28,7 +28,7 @@ private:
 };
 ```
 ### 条件变量
-1. Blockingqueue
+Blockingqueue
 **关于封装条件变量的一般使用，假设我们要实现简单的容量无限的BlockingQueue，可以这样写：
 ```
 MutexLock mutex;
