--- a/技术总结.md
+++ b/技术总结.md
@@ -28,8 +28,9 @@ private:
 };
 ```
 ### 条件变量
-Blockingqueue
-**关于封装条件变量的一般使用，假设我们要实现简单的容量无限的BlockingQueue，可以这样写：
+1. Blockingqueue
+
+关于封装条件变量的一般使用，假设我们要实现简单的容量无限的BlockingQueue，可以这样写：
 ```
 MutexLock mutex;
 Condition cond(mutex);
