--- a/技术总结.md
+++ b/技术总结.md
@@ -57,3 +57,11 @@ void enqueue(int x )
     cond.notify();
 }
 ```
+
+2. CountDownLatch
+
+CountDownLatch,本质上来说,是一个thread safe的计数器,用于主线程和工作线程的同步.
+它的主要用法有两种:
+* 第一种:在初始化时,需要指定主线程需要等待的任务的个数(count),当工作线程完成 Task Callback后对计数器减1，而主线程通过wait()调用阻塞等待技术器减到0为止。**通常用于主线程等待多个子线程完成初始化。**
+* 第二种:主线程发起多个子线程，子线程都等待主线程，主线程完成其他任务之后通知所有子线程开始执行。**通常用于多个子线程等待主线程发出起跑命令。**
+
