--- a/技术总结.md
+++ b/技术总结.md
@@ -109,4 +109,90 @@ class CountDownLatch : boost::noncopyable
 };
 ```
 
+## 多线程日志
+一个多线程程序的每个线程只写一个日志文件，这样分析日志更容易，不必在多个文件中跳来跳去，多线程写多个文件也不一定能提速。
+采用“异步日志”的方式，用一个背景线程负责收集日志消息，并写入日志文件, 其他业务线程只管往这个“日志线程”发送日志消息。
+
+日志库采用的是双缓冲技术，基本思路是准备两块buffer：A和B。前端负责往buffer A填数据，后端负责将buffer B 的数据写人文件。
+当buffer A写满之后，交换A和B，让后端将buffer A的数据写入文件，而前端则往buffer B填人新的日志消息，如此往复。
+
+用两个buffer的好处是：在新建日志消息的时候不必等待磁盘文件操作，也避免每条新日志消息都触发后端日志线程。
+换言之，前端不是将一条条日志消息分别传送给后端，而是将多条日志消息拼成一个大的buffer传送给后端，相当于批处理，减少了线程唤醒的频度，降低开销。
+另外，为了及时将日志消息写人文件，即便buffer A未满，日志库也会每3秒执行一次上述交换写人操作。
+
+关键代码 base/AsyncLogging.cpp
+```
+void AsyncLogging::threadFunc() {//后端接收日志
+  assert(running_ == true);
+  latch_.countDown();
+  LogFile output(basename_);
+  BufferPtr newBuffer1(new Buffer);//准备两块空闲的日志
+  BufferPtr newBuffer2(new Buffer);
+  newBuffer1->bzero();
+  newBuffer2->bzero();
+  BufferVector buffersToWrite;
+  buffersToWrite.reserve(16);
+  while (running_) {
+    assert(newBuffer1 && newBuffer1->length() == 0);
+    assert(newBuffer2 && newBuffer2->length() == 0);
+    assert(buffersToWrite.empty());
+
+    {
+      MutexLockGuard lock(mutex_);
+      if (buffers_.empty())  // unusual usage!
+      {
+        cond_.waitForSeconds(flushInterval_);//触发条件：1，超时 2，前端写满了一个或者多个buffer
+      }
+      buffers_.push_back(currentBuffer_);
+      currentBuffer_.reset();
+
+      currentBuffer_ = std::move(newBuffer1);//将空闲的newBuffer1移为当前缓冲
+      buffersToWrite.swap(buffers_);//内部指针交换而非复制，这样代码可以在临界区之外安全的访问buffersToWrite
+      if (!nextBuffer_) {
+        nextBuffer_ = std::move(newBuffer2);//neWBuffer2替换nextBuffer_，这样前端始终有一个预备buffer可供调配
+      }
+    }
+
+    assert(!buffersToWrite.empty());
+
+    if (buffersToWrite.size() > 25) {//处理过多的日志堆积问题，直接丢弃
+      char buf[256];
+      snprintf(buf, sizeof buf, "Dropped log messages at %s, %zd larger buffers\n",
+                Timestamp::now().toFormattedString().c_str(),
+                buffersToWrite.size()-2);
+      fputs(buf, stderr);
+      output.append(buf, static_cast<int>(strlen(buf)));
+      buffersToWrite.erase(buffersToWrite.begin() + 2, buffersToWrite.end());
+    }
+
+    for (size_t i = 0; i < buffersToWrite.size(); ++i) {
+      output.append(buffersToWrite[i]->data(), buffersToWrite[i]->length());
+    }
+
+    if (buffersToWrite.size() > 2) {
+      // drop non-bzero-ed buffers, avoid trashing
+      buffersToWrite.resize(2);
+    }
+
+    if (!newBuffer1) {
+      assert(!buffersToWrite.empty());
+      newBuffer1 = buffersToWrite.back();
+      buffersToWrite.pop_back();
+      newBuffer1->reset();
+    }
+
+    if (!newBuffer2) {
+      assert(!buffersToWrite.empty());
+      newBuffer2 = buffersToWrite.back();
+      buffersToWrite.pop_back();
+      newBuffer2->reset();
+    }
+
+    buffersToWrite.clear();
+    output.flush();
+  }
+  output.flush();
+}
+```
+
 
