--- a/技术总结.md
+++ b/技术总结.md
@@ -255,7 +255,17 @@ void AsyncLogging::threadFunc() {//后端接收日志
 8. TcpServer：用于编写网络服务器，接受客户的连接
 
 ## 并发模型
+
+本网络库是并发非阻塞TCP网络编程，它的核心是每个IO线程是一个事件循环，把IO事件分发到回调函数上。
+编写网络库的目的之一就是简化日常的TCP网络编程，让程序员能把精力集中在业务逻辑的实现上，而不要天天和Sockets API较劲。
+
+基于事件的非阻塞网络编程是编写高性能并发网络服务程序的主流模式：
+头一次使用这种方式编程通常需要转换思维模式：把原来“主动调用recv()来接收数据，主动调用accept()来接受新连接，主动调用send()来发送数据”的思路换成
+“注册一个收数据的回调，网络库收到数据会调用我，直接把数据提供给我，供我消费。注册一个接受连接的回调，网络库接受了新连接会回调我，直接把新的连接对象传给我，供我使用。
+需要发送数据的时候，只管往连接中写，网络库会负责无阻塞地发送。”
+
 本项目使用的并发模型如下：
+
 ![并发模型](https://github.com/coffee0218/WebServer/blob/master/data/model.png)
 
 每个线程最多有一个EventLoop，每个TcpConnection必须归某个EventLoop管理。MainReactor只有一个，负责响应client的连接请求，并建立连接，它使用一个NIO Selector。
