--- a/技术总结.md
+++ b/技术总结.md
@@ -269,9 +269,11 @@ void AsyncLogging::threadFunc() {//后端接收日志
 ![并发模型](https://github.com/coffee0218/WebServer/blob/master/data/model.png)
 
 每个线程最多有一个EventLoop，每个TcpConnection必须归某个EventLoop管理。MainReactor只有一个，负责响应client的连接请求，并建立连接，它使用一个NIO Selector。
-Acceptor与MainEventLoop在同一个线程，另外创建一个EventLoopThreadPool，新的连接会按round-robin方式分配到线程中。
+Acceptor与MainEventLoop在同一个线程，另外创建一个EventLoopThreadPool，新的连接会按round-robin方式分配到线程中，线程池的大小是固定的，池子的大小通常根据CPU数目确定。
 
-SubReactor可以有一个或者多个，每个subReactor都会在一个独立线程中运行，属于某个EventLoop，并且维护一个独立的NIO Selector。
+新的TcpConnection连接挂在某个subReactor中，该连接的所有操作都在那个subReactor所处的线程中完成。多个连接可能被分派到多个线程中，以充分利用CPU。
+每个subReactor都会在一个独立线程中运行，属于某个EventLoop，并且维护一个独立的NIO Selector。
 
+一个连接完全由MainReactor一个线程管理，请求的顺序性得到保证，同时IO的请求压力比较大时，subReactor也可以分担。
 当主线程把新连接分配给了某个SubReactor，该线程此时可能正阻塞在多路选择器(epoll)的等待中，怎么得知新连接的到来呢？这里使用了eventfd进行异步唤醒，线程会从epoll_wait中醒来，得到活跃事件，进行处理。
 
