--- a/技术总结.md
+++ b/技术总结.md
@@ -277,3 +277,15 @@ Acceptor与MainEventLoop在同一个线程，另外创建一个EventLoopThreadPo
 一个连接完全由MainReactor一个线程管理，请求的顺序性得到保证，同时IO的请求压力比较大时，subReactor也可以分担。
 当主线程把新连接分配给了某个SubReactor，该线程此时可能正阻塞在多路选择器(epoll)的等待中，怎么得知新连接的到来呢？这里使用了eventfd进行异步唤醒，线程会从epoll_wait中醒来，得到活跃事件，进行处理。
 
+## Buffer设计
+Non-blocking IO 的核心思想是避免阻塞在 read() 或 write() 或其他 IO 系统调用上，这样可以最大限度地复用 thread-of-control，让一个线程能服务于多个 socket 连接。
+IO 线程只能阻塞在 IO-multiplexing 函数上，如 select()/poll()/epoll_wait()。这样一来，应用层的缓冲是必须的，每个 TCP socket 都要有input buffer 和 output buffer。
+
+Buffer 其实像是一个 queue，从末尾写入数据，从头部读出数据。
+•	对外表现为一块连续的内存(char* p, int len)，以方便客户代码的编写。 
+•	其 size() 可以自动增长，以适应不同大小的消息。它不是一个 fixed size array (即 char buf[8192])。 
+•	内部以 vector of char 来保存数据，并提供相应的访问函数。 
+
+Buffer 的数据结构如下：
+
+
