--- a/技术总结.md
+++ b/技术总结.md
@@ -298,4 +298,49 @@ Buffer 的数据结构如下：
 
 readIndex 和 writeIndex 满足以下不变式(invariant): 0 ≤ readIndex ≤ writeIndex ≤ data.size()
 
+Buffer如何读取数据，一方面我们希望减少系统调用，一次读的数据越多越划算，那么似乎应该准备一个大的缓冲区。另一方面，我们系统减少内存占用。
+如果有 10k 个连接，每个连接一建立就分配 64k 的读缓冲的话，将占用 640M 内存，而大多数时候这些缓冲区的使用率很低。用 readv 结合栈上空间巧妙地解决了这个问题。
+
+Buffer的做法比较巧妙，Buffer底层默认会有一个1KB大小的vector，除此之外，在栈上申请一个65536字节大小的临时空间，当网络套接字数据太大时，可以将超出1K的数据先放入这个临时空间，
+然后在append到Buffer里面（这个时候Buffer就会resize一个适应的大小）。
+
+因为使用read()将数据读到不连续的内存、使用write()将不连续的内存发送出去，要经过多次的调用read、write。
+UNIX提供了另外两个函数readv()和writev()，它们只需一次系统调用就可以实现在文件和进程的多个缓冲区之间传送数据，免除了多次系统调用或复制数据的开销。
+在一次函数调用中：
+* writev以顺序iov[0]、iov[1]至iov[iovcnt-1]从各缓冲区中聚集输出数据到fd
+* readv则将从fd读入的数据按同样的顺序散布到各缓冲区中，readv总是先填满一个缓冲区，然后再填下一个
+
+// 结合栈上的空间，避免内存使用过大，提高内存使用率
+```
+ssize_t Buffer::readFd(int fd, int *savedErrno)
+{
+    // 节省一次ioctl系统调用（获取有多少可读数据）
+    char extrabuf[65536];
+    struct iovec vec[2];
+    const size_t writable = writableBytes();
+    // 第一块缓冲区
+    vec[0].iov_base = begin() + writerIndex_;
+    vec[0].iov_len = writable;
+    // 第二块缓冲区
+    vec[1].iov_base = extrabuf;
+    vec[1].iov_len = sizeof extrabuf;
+    const ssize_t n = sockets::readv(fd, vec, 2);
+    if (n < 0)
+    {
+        *savedErrno = errno;
+    }
+    else if (implicit_cast<size_t>(n) <= writable)  //第一块缓冲区足够容纳
+    {
+        writerIndex_ += n;
+    }
+    else        // 当前缓冲区，不够容纳，因而数据被接收到了第二块缓冲区extrabuf，将其append至buffer
+    {
+        writerIndex_ = buffer_.size();
+        append(extrabuf, n - writable);
+    }
+
+    return n;
+}
+```
+
 
