--- a/技术总结.md
+++ b/技术总结.md
@@ -240,7 +240,8 @@ void AsyncLogging::threadFunc() {//后端接收日志
 5. 接下来会将 buffersToWrite 内的 buffer 重新填充 newBufferl 和 newBuffer2，这样下一次执行的时候还有两个空闲buffer可用于替换前端的当前缓冲和预备缓冲。
 
 ## 网络核心库
-本项目是基于Reactor模式的网络库，其核心是个事件循环EventLoop，用于相应计时器和IO事件
+本项目是基于Reactor模式的网络库，其核心是个事件循环EventLoop，用于相应计时器和IO事件。
+reactor最核心的事件分发机制，即将IO multiplexing 拿到的IO事件分发给各个文件描述符(fd)的事件处理函数。
 
 主要部件：
 1. Buffer：数据的读写通过buffer进行。用户代码不需要调用read()/write()，只需要处理收到的数据和准备好要发送的数据
@@ -342,5 +343,42 @@ ssize_t Buffer::readFd(int fd, int *savedErrno)
     return n;
 }
 ```
+## TimerQueue定时器
+
+传统的Reactor通过控制select和poll的等待事件来实现定时，而现在在linux中有了timerfd，我们可以用和处理IO事件相同的方式来处理定时，代码的一致性更好。
+TimerQueue只实现addTimer(), cancel(). addTimer()是提EventLoop使用的，EventLoop会把它封装成为更好用的runAt()，runAfter()，runEvery()等函数。
+```
+TimerId EventLoop::runAt(const Timestamp& time, const TimerCallback& cb)
+{
+  return timerQueue_->addTimer(cb, time, 0.0);
+}
+
+TimerId EventLoop::runAfter(double delay, const TimerCallback& cb)
+{
+  Timestamp time(addTime(Timestamp::now(), delay));
+  return runAt(time, cb);
+}
+
+TimerId EventLoop::runEvery(double interval, const TimerCallback& cb)
+{
+  Timestamp time(addTime(Timestamp::now(), interval));
+  return timerQueue_->addTimer(cb, time, interval);
+}
+```
+
+TimerQueue需要高效地组织目前尚未到期的Timer，能快速根据当前时间找到已经到期的Timer，也能高效地添加和删除Timer。
+最简单的TimerQueue以按到期时间排好序的线性表为数据结构，常用操作都是线性查找，复杂度是O（N）。
+另一种常用做法是二叉堆组织优先队列，这种做法的复杂度是O（NlogN），但是C++标准库中的make_heap不能高效地删除heap中间的某个元素，需要我们自己实现。
+还有一种做法是使用二叉搜索树（set或者map），把Timer按到期时间先后排好序，操作复杂度仍然是O（NlogN），但是我们不能直接用map<Timestamp, Timer*>，
+因为这样无法处理两个Timer到期时间相同的情况。
+
+采用pair<Timestamp, Timer*>为key，这样即使两个Timer的到期时间相同，它们的地址也必定不同。TimerList是set而非map，因为只有key没有value。
+这样也保证了它们插入查找删除的复杂度为O(logN)。
+```
+typedef std::pair<Timestamp, Timer*> Entry;
+typedef std::set<Entry> TimerList;
+```
+
+
 
 
